# nyan-doom-nx

./: .gitignore  README.md  SWITCH_CHANGES.md  build-switch.ps1
.github/workflows/: continuous_integration.yml
docs/: nyanhud.md
docs/guides/: build_switch_deps.sh
patch_notes/: v1.5.md
prboom2/: CMakeLists.txt  vcpkg.json
prboom2/cmake/: NyanConfigHeader.cmake  NyanDependencies.cmake  NyanOptions.cmake  SwitchToolchain.cmake  config.h.cin
prboom2/data/lumps/: nyanhud.lmp
prboom2/packaging/: DarwinGenerator.cmake
prboom2/src/: CMakeLists.txt  am_map.c  am_map.h  d_event.h  d_main.c  doomstat.h  e6y.c  f_wipe.c  gl_light.c  gl_main.c  gl_map.c  gl_opengl.h  gl_struct.h  gl_stub.c  gl_texture.c  i_sound.h  m_menu.c  m_menu.h  m_misc.c  p_enemy.c  p_inter.c  p_inter.h  p_pspr.c  p_pspr.h  p_saveg.c  p_spec.c  p_spec.h  r_data.c  r_data.h  r_defs.h  r_draw.c  r_draw.h  r_drawcolumn.inl  r_patch.c  r_patch.h  r_plane.c  r_plane.h  r_sky.c  r_sky.h  s_advsound.c  (+3 more)
prboom2/src/MUSIC/: flplayer.c  flplayer.h
prboom2/src/SDL/: i_main.c  i_sound.c  i_sshot.c  i_switch.c  i_switch.h  i_system.c  i_video.c
prboom2/src/deh/: nyan.c  thing.c
prboom2/src/dsda/: configuration.c  configuration.h  cr_table.c  endoom.c  exdemo.c  exhud.c  game_controller.c  input.h  mapinfo.c  mapinfo.h  mobjinfo.c  mobjinfo.h  music.c  palette.c  palette.h  playback.c  text_color.c  text_color.h  text_file.c  tranmap.c  tranmap.h
prboom2/src/dsda/hud_components/: big_ammo.c  big_armor.c  big_health.c  keys.c  map_time.c  map_time.h  map_totals.c
prboom2/src/dsda/mapinfo/: doom.c  doom.h  hexen.c  hexen.h  legacy.c  legacy.h  u.c  u.h
prboom2/src/heretic/: mn_menu.c  mn_menu.h
prboom2/src/heretic/hhe/: thing.c
prboom2/src/textscreen/: txt_sdl.c
